# fastapi-auth0-example

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
app/: config.py  deps.py  main.py
example_api/: config.py  deps.py  main.py
example_api/routers/: users.py
tests/: conftest.py
